--- a/AnalysisHelper/NAMESPACE
+++ b/AnalysisHelper/NAMESPACE
@@ -3,6 +3,7 @@
 export(Subset)
 export(Taxa.mat)
 export(load.lib)
+export(make.dir)
 export(makeColPalette)
 export(palettes)
 importFrom(RColorBrewer,brewer.pal.info)
