--- a/AnalysisHelper/NAMESPACE
+++ b/AnalysisHelper/NAMESPACE
@@ -7,6 +7,7 @@ export(load.lib)
 export(make.dir)
 export(makeColPalette)
 export(palettes)
+importFrom(RColorBrewer,brewer.pal)
 importFrom(RColorBrewer,brewer.pal.info)
 importFrom(Rcpp,sourceCpp)
 useDynLib(AnalysisHelper, .registration=TRUE)
