--- a/AnalysisHelper/NAMESPACE
+++ b/AnalysisHelper/NAMESPACE
@@ -9,6 +9,7 @@ export(make.dir)
 export(makeColPalette)
 export(palettes)
 export(saveFiles)
+export(theme_text)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(RColorBrewer,brewer.pal.info)
 importFrom(Rcpp,sourceCpp)
