--- a/AnalysisHelper/NAMESPACE
+++ b/AnalysisHelper/NAMESPACE
@@ -9,8 +9,10 @@ export(make.dir)
 export(makeColPalette)
 export(palettes)
 export(saveFiles)
+export(theme_md)
 export(theme_text)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(RColorBrewer,brewer.pal.info)
 importFrom(Rcpp,sourceCpp)
+importFrom(ggtext,element_markdown)
 useDynLib(AnalysisHelper, .registration=TRUE)
