--- a/AnalysisHelper/NAMESPACE
+++ b/AnalysisHelper/NAMESPACE
@@ -4,15 +4,19 @@ export(Subset)
 export(Taxa.mat)
 export(binary)
 export(filtMat)
+export(for.parallel)
 export(load.lib)
 export(make.dir)
 export(makeColPalette)
 export(palettes)
 export(saveFiles)
+export(savefile_set)
 export(theme_md)
 export(theme_text)
+import(dplyr)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(RColorBrewer,brewer.pal.info)
 importFrom(Rcpp,sourceCpp)
 importFrom(ggtext,element_markdown)
+useDynLib(AnalysisHelper, .registration = TRUE)
 useDynLib(AnalysisHelper, .registration=TRUE)
