--- a/AnalysisHelper/NAMESPACE
+++ b/AnalysisHelper/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(Subset)
 export(Taxa.mat)
+export(barplot_obj)
 export(binary)
 export(filtMat)
 export(for.parallel)
@@ -17,6 +18,8 @@ import(dplyr)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(RColorBrewer,brewer.pal.info)
 importFrom(Rcpp,sourceCpp)
+importFrom(dplyr,arrange)
+importFrom(dplyr,bind_rows)
 importFrom(ggtext,element_markdown)
 useDynLib(AnalysisHelper, .registration = TRUE)
 useDynLib(AnalysisHelper, .registration=TRUE)
