--- a/AnalysisHelper/DESCRIPTION
+++ b/AnalysisHelper/DESCRIPTION
@@ -9,8 +9,11 @@ License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
 LinkingTo: 
     Rcpp
 Imports: 
-    Rcpp
+    Rcpp,
+    RColorBrewer,
+    dplyr,
+    ggtext
